--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@
     list-style: none;
 }
 
+
+
 body {
     background-color: black;
     display: flex;
@@ -64,9 +66,9 @@ body {
 }
 
 .banner h1 {
-    font-size: 30px;
+    font-size: 2.5rem;
     font-weight: 900;
-    margin-top: 25px;
+    margin-top: 24px;
     color: transparent;
     background: -webkit-linear-gradient(goldenrod, black);
     background-clip: text;
@@ -74,7 +76,7 @@ body {
 }
 
 .banner p {
-    font-size: 20px;
+    font-size: 1.25rem;
     font-weight: 400;
     line-height: 1.5rem;
     color: white;
@@ -107,7 +109,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 800px;
+    width: 100%;
     padding: 100px 0;
     text-align: center;
     color: white;
@@ -136,7 +138,7 @@ body {
 .section-container ul li {    
     background-color: #252525;
     margin-top: 24px;
-    width: 530px;
+    width: 300px;
     padding: 16px 0;
     border: 1px solid goldenrod;
     border-radius: 58px;
@@ -168,10 +170,11 @@ body {
 }
 
 footer {
+    width: 100%;
     padding: 60px 0;
     color: white;
     text-align: center;
-    width: 1440px;
+    width: 100%;
     background: linear-gradient(170deg, rgba(19, 20, 19, 0.849) 0%, rgba(194, 160, 7, 0.932) 99.99%, rgba(0, 0, 0, 0.2) 100%);
 }
 
