--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
- 
+    font-family: 'Arial';
 }
 
 .container {
@@ -33,7 +33,7 @@ body {
     background-image:     
     linear-gradient(180deg, rgba(0,0,0,0.7) 0%, rgba(51,168,219,0.2) 50%, rgba(0,0,0,1) 100%),
     url('./assets/images/banner.png');
-    background-size: 120%;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
     text-align: center;
     }
